--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ group 'com.anmi.architecture'
 
 def buildNumber = System.getenv("CI_JOB_ID") ? System.getenv("CI_JOB_ID") : ""
 
-version "1.0.1"
+version "1.0.2-SNAPSHOT"
 
 repositories {
     mavenCentral()
